Enhance README with project details and usage
Added detailed project description, features, prerequisites, and usage instructions.